test/integration/bad/numeric-literal/int-bad6.stan
transformed data {
    int n = -2147483648;
}